# jackknife

./: .gitignore  README.md  jackknife.cabal
app/: Jackknife.hs  Main.hs  MergeSort.hs
app/jackknife-mem/: Main.hs
src/: AltMS.hs  ArrMS.hs  ArrayQuickSort.hs  Jackknife.hs
src/Jackknife/: Eval.hs  Explicit.hs  MonadPar.hs  Sequential.hs  Strat.hs
src/MergeSort/: Util.hs
src/MergeSort/Style/: Eval.hs  Explicit.hs  MonadPar.hs  Sequential.hs  Strat.hs
