name:                jackknife
version:             0.1.0.0
synopsis:            For PFP at Chalmers 2017
description:         See the readme
homepage:            https://github.com/fredefox/jackknife#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Copyright: (c) 2017 Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jackknife
                     , Jackknife.Eval
                     , Jackknife.Explicit
                     , Jackknife.Sequential
                     , Jackknife.MonadPar
                     , Jackknife.Strat
  build-depends:       base >= 4.7 && < 5,
                       parallel >= 3.2.1.0
  default-language:    Haskell2010
  if flag(debug)
    ghc-options:       -eventlog

executable jackknife
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jackknife
                     , random
                     , criterion
  default-language:    Haskell2010
  if flag(debug)
    ghc-options:       -rtsopts -threaded -debug

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jackknife
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/fredefox/jackknife

flag debug
  default: True
  manual:  True
