name:                jackknife
version:             0.1.0.0
synopsis:            For PFP at Chalmers 2017
description:         See the readme
homepage:            https://github.com/fredefox/jackknife#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Copyright: (c) 2017 Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     assets/mergesort.png
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jackknife
                     , Jackknife.Eval
                     , Jackknife.Explicit
                     , Jackknife.Sequential
                     , Jackknife.MonadPar
                     , Jackknife.Strat
                     , MergeSort.Util
                     , MergeSort.Style.Sequential
                     -- , MergeSort.Style.MonadPar
                     -- , MergeSort.Style.Strat
                     , MergeSort.Style.Explicit
                     , MergeSort.Style.Eval
  build-depends:       base >= 4.7 && < 5,
                       monad-par >= 0.3.4.8,
                       parallel >= 3.2.1.0,
                       deepseq
  default-language:    Haskell2010
  if flag(debug)
     ghc-options:      -debug

executable jackknife
  hs-source-dirs:      app
  main-is:             Jackknife.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , jackknife
                     , monad-par >= 0.3.4.8
                     , random
  default-language:    Haskell2010
  ghc-options:         -rtsopts -threaded
  if flag(debug)
    ghc-options:       -debug

executable jackknife-mem
  hs-source-dirs:      app/jackknife-mem
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base
                     , jackknife
                     , random
                     , deepseq
                     , parallel
  default-language:    Haskell2010
  ghc-options:         -rtsopts -threaded
  -- if flag(profiling)
  --   ghc-options:       -prof -fprof-auto

executable mergesort
  hs-source-dirs:      app
  main-is:             MergeSort.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , deepseq >= 1.4.2.0
                     , jackknife
                     , random
                     , parallel
  default-language:    Haskell2010
  if flag(debug)
    ghc-options:       -debug

source-repository head
  type:     git
  location: https://github.com/fredefox/jackknife

flag debug
  default: True
  manual:  True

flag profiling
  default: False
  manual:  True
